# carla_ros

./: CMakeLists.txt  README.md  package.xml
scripts/: carla_env.py  carla_setting.py
urdf/: carla.urdf
